--- a/IL2CPP-Resolver-Base/IL2CPP-Resolver-Base.vcxproj
+++ b/IL2CPP-Resolver-Base/IL2CPP-Resolver-Base.vcxproj
@@ -18,6 +18,59 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cache.hpp" />
+    <ClInclude Include="Data.hpp" />
+    <ClInclude Include="Defines.hpp" />
+    <ClInclude Include="Functions\Callback.hpp" />
+    <ClInclude Include="Functions\Class.hpp" />
+    <ClInclude Include="Functions\Domain.hpp" />
+    <ClInclude Include="Functions\ResolveCall.hpp" />
+    <ClInclude Include="Functions\String.hpp" />
+    <ClInclude Include="Functions\Thread.hpp" />
+    <ClInclude Include="Includes.hpp" />
+    <ClInclude Include="Main.hpp" />
+    <ClInclude Include="Unity\API\Camera.hpp" />
+    <ClInclude Include="Unity\API\Component.hpp" />
+    <ClInclude Include="Unity\API\GameObject.hpp" />
+    <ClInclude Include="Unity\API\LayerMask.hpp" />
+    <ClInclude Include="Unity\API\Object.hpp" />
+    <ClInclude Include="Unity\API\Rigidbody.hpp" />
+    <ClInclude Include="Unity\API\Transform.hpp" />
+    <ClInclude Include="Unity\API\_TEMPLATE_API.hpp" />
+    <ClInclude Include="Unity\Defines.hpp" />
+    <ClInclude Include="Unity\Includes.hpp" />
+    <ClInclude Include="Unity\Obfuscators.hpp" />
+    <ClInclude Include="Unity\Structures\Engine.hpp" />
+    <ClInclude Include="Unity\Structures\il2cpp.hpp" />
+    <ClInclude Include="Unity\Structures\il2cppArray.hpp" />
+    <ClInclude Include="Unity\Structures\il2cppDictionary.hpp" />
+    <ClInclude Include="Unity\Structures\Includes.hpp" />
+    <ClInclude Include="Unity\Structures\System_String.hpp" />
+    <ClInclude Include="Utils\Helper.hpp" />
+    <ClInclude Include="Utils\Joaat.hpp" />
+    <ClInclude Include="Utils\VFunc.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Cache.cpp" />
+    <ClCompile Include="Data.cpp" />
+    <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Functions\Callback.cpp" />
+    <ClCompile Include="Functions\Class.cpp" />
+    <ClCompile Include="Functions\String.cpp" />
+    <ClCompile Include="Functions\Thread.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Unity\API\Camera.cpp" />
+    <ClCompile Include="Unity\API\Component.cpp" />
+    <ClCompile Include="Unity\API\GameObject.cpp" />
+    <ClCompile Include="Unity\API\LayerMask.cpp" />
+    <ClCompile Include="Unity\API\Object.cpp" />
+    <ClCompile Include="Unity\API\Rigidbody.cpp" />
+    <ClCompile Include="Unity\API\Transform.cpp" />
+    <ClCompile Include="Unity\API\_TEMPLATE_API.cpp" />
+    <ClCompile Include="Unity\Obfuscators.cpp" />
+    <ClCompile Include="Utils\Helper.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -27,26 +80,26 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
